Changelog
=========

Release 4.1.0 [2012-17-05]

* reworked build system to work as 'normal' python package
* fixed bug in average_time introduced in 4.0
* experimental merging of IFs
* speed ups
* move to ipython>=0.11
* fixed regression of reference scan detection for Hobart data
* work under OS X 10.7 

Release 4.0.0 [2011-10-05]

* Ticket #251 fixed scantable.scale broken behaviour when selection was set
* Ticket #250 fixed average_time's change in behaviour
* Ticket #249 fixed backwards compatibility with existing scantable
* speed up of scantable.summary which has changed the 
  output of the summary information
* various changes to MS export

Release 3.1.0 [2011-08-10]

* additional baseline fitting, e.g. sinusoid, cspline
* speed ups in various areas
* plotter metadata display
* interactive statistics
* improved packaging
* matplotlib >= 1.0 support
* better support for MeasurementSet data
* more statistics e.g. max/min abcissa
* row-based flagging
* apply fft to spectra
* improved mask handling

Release 3.0.0 [2010-05-06]

* BEWARE: added asap2to3 which converts '.asap' files from version 2 to 
          version 3
* Ticket #183 Added scantable.get_weather
* Ticket #181 Added work-around for casacore bug in saving tables with
              selection
* Ticket #178 Added opacity_model based on  miriad's atmospheric model
* Ticket #177 Added function skydip to determine opacities.
* Ticket #172 Fixed non-working scantable.resample
* Ticket #155 Better output filenames. Ignore non-existsing 
              beams/pols/ifs/scans
* Ticket #157 numpy >= 1.1 support
* Ticket #158 fixed plotter.set_font
* Ticket #160 Aspect ratio of plotter is customisable now
* Ticket #163 fixed for scantable.set_sourcetype
* Ticket #164 Upgrade note in wiki FAQ
* Ticket #165 Handle non-parallactified polarimtery data (if supported in 
              rpfits)
* Ticket #167 Added running polynomial filter to scantable.smooth